--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 @theme {
   --color-bgPrimary: #f2f5fa;
+  --color-secondaryWhite: #f1f1f1;
   --color-lightGray: #b7b9bb;
   --color-gray: #808080;
   --color-accentGreen: #8bc34a;
