add task drawer info, refactor

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,9 @@
   --color-accentLightBlue: #03a9f4;
   --color-accentBlue: #4f6ea3;
   --color-accentRed: #ff5722;
+  --color-green: #97c95d;
   --color-textMain: #333333;
+  --color-metaGray: #96999c;
 
   --font-open: "Open Sans", sans-serif;
 }
